# 6sem_mainELecg

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: ecg.js
frontend/src/components/ecg/: ECGUploadZone.jsx  ECGWaveformCanvas.jsx
frontend/src/components/model/: AnomalyIndicator.jsx  (+5 more)
frontend/src/layout/: AppShell.jsx  Sidebar.jsx  TopBar.jsx
frontend/src/pages/: Architecture.jsx  Dashboard.jsx  Live.jsx  Patients.jsx  Reports.jsx
frontend/src/state/: AppContext.jsx
frontend/src/store/: patientStore.js
notebooks/: 03_model_training.ipynb
src/api/: main.py  middleware.py  schemas.py  state.py
src/api/routers/: ecg.py  patient.py  risk.py
src/decision/: anomaly_detector.py  bayesian_uncertainty.py  hybrid_fusion.py  risk_engine.py
src/features/: cnn_extractor.py  fusion.py  graph_builder.py  wavelet_extractor.py
src/models/: bilstm.py  full_model.py  gnn.py  memory_network.py  meta_learner.py  tcn.py  vae.py
src/personalization/: baseline_manager.py  memory_store.py  patient_profile.py
src/preprocessing/: filter.py  normalization.py  pipeline.py  segmentation.py
src/training/: dataset.py  evaluate.py  loss.py  trainer.py
src/utils/: config.py  logger.py  visualization.py
tests/: test_api.py  test_cnn_extractor.py  test_memory_network.py  test_preprocessing.py  test_risk_engine.py  test_vae.py
(+17 files in other folders)
